--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "bootstrap": "4",
-    "jquery": "2.1.1",
-    "moment": "2.18.1",
-    "tempusdominus-bootstrap-4": "^5.39.2",
-    "tempusdominus-core": "^5.19.3"
+    "air-datepicker": "^3.3.5",
+    "esbuild": "^0.17.8"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
