--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,6 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: meetings_render_production
+  username: meetings_render
+  password: <%= ENV['MY_APP_RENDER_DATABASE_PASSWORD'] %>
