--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,10 @@ test:
 
 production:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: meetings_render_production
+  encoding: unicode
+  pool: 5
+  url: <%= ENV['DATABASE_URL'] %>
+  username: meetings_render
+  password: <%= ENV['DATABASE_PASSWORD'] %>
